# sola

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
sola/: core.py  main.py
sola/commands/: auth.py  build.py  init.py
specs/: AI_ENGINEERING.md  ARCHITECTURE.md
templates/: Dockerfile.j2  Makefile.j2  README.md.j2  docker-compose.yml.j2  health_router.py.j2  main.py.j2  pyproject.toml.j2
tests/: test_main.py
